@@ -206,33 +206,39 @@ for my $spec (
     },
     {
         uri => 'db:oracle://localhost:33/foo',
-        dsn => 'dbi:Oracle:host=localhost;port=33;service_name=foo',
-        dbi => [ [host => 'localhost'], [port => 33], [service_name => 'foo'] ],
+        dsn => 'dbi:Oracle://localhost:33/foo',
+        dbi => [ [host => 'localhost'], [port => 33], [dbname => 'foo'] ],
         qry => [],
     },
     {
         uri => 'db:oracle://localhost/foo',
-        dsn => 'dbi:Oracle:host=localhost;service_name=foo',
-        dbi => [ [host => 'localhost'], [port => undef], [service_name => 'foo'] ],
+        dsn => 'dbi:Oracle://localhost/foo',
+        dbi => [ [host => 'localhost'], [port => undef], [dbname => 'foo'] ],
         qry => [],
     },
     {
         uri => 'db:oracle://:42/foo',
-        dsn => 'dbi:Oracle:port=42;service_name=foo',
-        dbi => [ [host => ''], [port => 42], [service_name => 'foo'] ],
+        dsn => 'dbi:Oracle://:42/foo',
+        dbi => [ [host => ''], [port => 42], [dbname => 'foo'] ],
         qry => [],
     },
     {
         uri => 'db:oracle:foo',
-        dsn => 'dbi:Oracle:service_name=foo',
-        dbi => [ [host => undef], [port => undef], [service_name => 'foo'] ],
+        dsn => 'dbi:Oracle:foo',
+        dbi => [ [host => undef], [port => undef], [dbname => 'foo'] ],
         qry => [],
     },
     {
         uri => 'db:oracle:///foo',
-        dsn => 'dbi:Oracle:service_name=foo',
-        dbi => [ [host => ''], [port => undef], [service_name => 'foo'] ],
+        dsn => 'dbi:Oracle:foo',
+        dbi => [ [host => ''], [port => undef], [dbname => 'foo'] ],
         qry => [],
+    },
+    {
+        uri => 'db:oracle://:42/foo?x=y;a=b',
+        dsn => 'dbi:Oracle://:42/foo?x=y&a=b',
+        dbi => [ [host => ''], [port => 42], [dbname => 'foo'] ],
+        qry => [ x => 'y', a => 'b' ],
     },
     {
         uri => 'db:mssql:',
